# MetalRenderer

./: CMakeLists.txt  LICENSE  README.md
Resources/: Main.storyboard  plist.in
Source/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  Renderer.hpp  Renderer.mm  ShaderTypes.h  Shaders.metal  ViewController.h  ViewController.m  ViewDelegate.h  ViewDelegate.m  ViewDelegate.mm  main.m
Source/Math/: CMakeLists.txt  Math.hpp  MathDefines.h  MatrixOperations.cpp  MatrixOperations.h  MatrixOperations.hpp  MatrixOperations.m  QuaternionOperations.cpp  QuaternionOperations.hpp  Transform.cpp  Transform.hpp
Source/Mesh/: CMakeLists.txt  CPUMesh.cpp  CPUMesh.hpp  GPUMesh.cpp  GPUMesh.hpp  MeshData.hpp  MeshLoader.cpp  MeshLoader.hpp
Source/RenderObject/: CMakeLists.txt  Camera.cpp  Camera.hpp  Model.cpp  Model.hpp  RenderGroup.cpp  RenderGroup.hpp  RenderObject.cpp  RenderObject.hpp
Source/Renderer/: Animation.cpp  Animation.hpp  CMakeLists.txt  InternalCamera.cpp  InternalCamera.hpp  InternalGroup.cpp  InternalGroup.hpp  InternalModel.cpp  InternalModel.hpp  Mesh.hpp  Renderer.hpp  Renderer.mm  RendererObjectDelegate.hpp  RendererObjectDelegate.mm  RendererResourceDelegate.hpp  RendererResourceDelegate.mm  Skeleton.cpp  Skeleton.hpp
Source/Texture/: CMakeLists.txt  Texture.hpp  Texture.mm
Source/Util/: CMakeLists.txt  DynamicList.h  DynamicList.m
